Fixing classes item overlap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,7 +466,7 @@ header h1 {
 }
 
 .yoga-class-item {
-  height: 45%;
+  height: 48%;
   margin-bottom: 0.5em;
 }
 
